--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -1,19 +1,3 @@
-.logo {
-  font-size: 24px !important;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 1.5px;
-  background: linear-gradient(90deg, hsla(347, 89%, 61%, 1) 0%, hsla(242, 42%, 40%, 1) 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  transition: all 0.3s ease-in-out;
-}
-
-.logo:hover {
-  text-shadow: 0 0 10px rgba(196, 63, 166, 0.5);
-}
-
-
 .navbar-nav .nav-link {
     font-size: 18px;
     color: white !important;
@@ -64,7 +48,7 @@
     .navbar-collapse {
       display: flex;
       flex-direction: column;
-      align-items: center; /* جعل جميع العناصر في المنتصف */
+      align-items: center;
       margin-top: 15px;
       border-radius: 25px;
       background-color: #000;
@@ -81,28 +65,4 @@
       justify-content: center;
       align-items: center;
     }  
-  }
-
-  @media (max-width: 1025px) {
-    .logo {
-      font-size: 20px !important;
-    }
-  }
-
-  @media (max-width: 385px) {
-    .logo {
-      font-size: 20px !important;
-    }
-    .navbar-toggler{
-      font-size: 1rem !important;
-    }
-  }
-
-  @media (max-width: 325px) {
-    .logo {
-      font-size: 16px !important;
-    }
-    .navbar-toggler{
-      font-size: 0.7rem !important;
-    }
   }
