--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Montserrat", sans-serif;
   background-color: #161513 !important;
 }
