--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,7 @@ body {
   font-family: "Montserrat", sans-serif;
   background-color: #161513 !important;
 }
+
+html {
+  scroll-behavior: smooth;
+}
