--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -23,7 +23,7 @@
   }
 
   .navbar-toggler{
-    background: linear-gradient(90deg, hsla(347, 89%, 61%, 1) 0%, hsla(242, 42%, 40%, 1) 100%) !important;
+    background: linear-gradient(90deg, #f44369 0%, #3e3b91 100%) !important;
     color: #fff !important;
     border: none !important;
     font-size: 1.5rem !important;
